--- a/zerocoder/main/templates/main/nav.html
+++ b/zerocoder/main/templates/main/nav.html
@@ -4,4 +4,5 @@
     <a href="{% url 'page3' %}" class="list-group-item list-group-item-action">Третья страница</a>
     <a href="{% url 'page4' %}" class="list-group-item list-group-item-action">Четвертая страница</a>
     <a href="{% url 'news_home' %}" class="list-group-item list-group-item-action">Новостная страница</a>
+    <a href="{% url 'news_add' %}" class="list-group-item list-group-item-action">Добавить новость</a>
 </div>
